Fix: token 생성 인코딩 수정